crates/uselesskey-rustls/tests/snapshots/snapshots_rustls_pki__ecdsa_rustls_conversion.snap
---
source: crates/uselesskey-core-rustls-pki/tests/snapshots_rustls_pki.rs
expression: results
---
- curve: P-256
  private_key_der_len: 138
  matches_source: true
- curve: P-384
  private_key_der_len: 185
  matches_source: true
