crates/uselesskey-rustls/tests/snapshots/snapshots_rustls_pki__ed25519_rustls_conversion.snap
---
source: crates/uselesskey-core-rustls-pki/tests/snapshots_rustls_pki.rs
expression: snap
---
private_key_der_len: 83
matches_source: true
