crates/uselesskey-rustls/tests/snapshots/snapshots_rustls_pki__self_signed_rustls_conversion.snap
---
source: crates/uselesskey-core-rustls-pki/tests/snapshots_rustls_pki.rs
expression: snap
---
private_key_der_len: 1218
cert_der_len: 757
private_key_matches_source: true
cert_matches_source: true
